<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sahayatri!</string>
    <string name="app_name_development">Sahayatri! :: Alpha</string>
    <string name="hint_username">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="label_vehicle_owner">Vehicle Owner</string>
    <string name="label_passanger">Passanger</string>
    <string name="label_login">Login</string>
    <string name="label_password_reset">Password reset</string>
    <string name="label_or">OR</string>
    <string name="label_register_now">Don\'t have an account ? Register Now !</string>
    <string name="label_button_register">Register</string>
    <string name="label_birth_date">Birth date</string>
    <string name="label_rf_heading">Register with Sahakari</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_passanger_dashboard">PassangerDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">example@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_signin_helper">Log in to your account.</string>

    <!-- ERROR MESSAGES -->
    <string name="error_email">This doesn\'t look like an email address.</string>
    <string name="error_phone">Are you sure this is your phone number ?</string>
    <string name="error_password">Password must be at least 6 characters.</string>
    <string name="error_name">Looks like this is not your name. example: John Niroula</string>
    <string name="title_activity_owner_dashboard">OwnerDashboardActivity</string>
    <string name="msg_invalid_password">Minimum 8 character is required.</string>
    <string name="msg_invalid_email">Valid email address is required.</string>
    <string name="msg_error_required">flexible</string>
    <string name="msg_email_required">Please enter a valid email.</string>
    <string name="msg_password_invalid">Passwor must be at least 8 characters. And also must include letters, numbers and special characters.</string>

    <!-- Rectify Validation Library Default Overrides -->
    <string name="rec_error_required">This field is required.</string>
    <string name="rec_error_phone">Please provide a valid phone number.</string>
    <string name="rec_decimal_required">Please enter a valid decimal number.</string>
    <string name="rec_email_required">Invalid email address.</string>
    <string name="rec_password_invalid">Password must be at least 8 characters in length. Must also include numbers,
        letters and special characters.
    </string>
    <string name="title_owner_vehicles">My Vehicles</string>
    <string name="subtitle_owner_vehicles">Manage the vechiles you own.</string>
    <string name="title_garage">Garage</string>
    <string name="title_vehicle_owner">Vehicle Owner Dashboard</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_graph">Graph</string>
    <string name="greet_afternoon">%s, %s!</string>

    <string-array name="place_name">
        <item>Kathmandu</item>
        <item>Bhairahawa</item>
        <item>Bhadrapur</item>
        <item>Wakanda</item>
        <item>Utopia</item>
        <item>Upside Down</item>
        <item>Happiness</item>
    </string-array>

</resources>
