<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rfLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999"
            app:srcCompat="@drawable/ic_bus" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rfInputFullName"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rfVehicleButtonHolder">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rfInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/rfInputFullName"
            app:layout_constraintStart_toStartOf="@+id/rfInputFullName"
            app:layout_constraintTop_toBottomOf="@+id/rfInputEmail">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/rfRegisterBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_button_register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rfInputPassword"
            app:layout_constraintStart_toStartOf="@+id/rfInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/rfPhoneNumber" />

        <TextView
            android:id="@+id/rfTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@+id/rfLogo"
            app:layout_constraintEnd_toEndOf="@+id/rfInputFullName"
            app:layout_constraintStart_toStartOf="@+id/rfInputFullName" />

        <LinearLayout
            android:id="@+id/rfVehicleButtonHolder"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <Button
                android:id="@+id/rfVehicleBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_vehicle_owner" />

            <Button
                android:id="@+id/rfPassangerBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_passanger" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rfPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/rfInputPassword"
            app:layout_constraintStart_toStartOf="@+id/rfInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/rfInputPassword">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="phone"
                android:maxLines="1"
                android:minLines="1" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/label_rf_heading"
            app:layout_constraintEnd_toEndOf="@+id/rfInputFullName"
            app:layout_constraintStart_toStartOf="@+id/rfInputFullName"
            app:layout_constraintTop_toBottomOf="@+id/rfLogo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rfInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/rfInputFullName"
            app:layout_constraintStart_toStartOf="@+id/rfInputFullName"
            app:layout_constraintTop_toBottomOf="@+id/rfInputFullName">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minLines="1" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/rfProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>