<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".ui.login.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lfLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003"
            app:srcCompat="@drawable/ic_bus" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lfInputUsername"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minLines="1"
                android:text="subtlenv@gmail.com" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lfInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/lfInputUsername"
            app:layout_constraintStart_toStartOf="@+id/lfInputUsername"
            app:layout_constraintTop_toBottomOf="@+id/lfInputUsername">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:text="password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/lfActionLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_selector"
            android:text="@string/label_login"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/lfInputPassword"
            app:layout_constraintStart_toStartOf="@+id/lfInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/lfInputPassword" />

        <TextView
            android:id="@+id/lfTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@+id/lfLogo"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" />

        <TextView
            android:id="@+id/lfActionReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/label_password_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lfActionLogin"
            app:layout_constraintStart_toStartOf="@+id/lfActionLogin"
            app:layout_constraintTop_toBottomOf="@+id/lfActionLogin"
            app:layout_constraintVertical_bias="0.100000024" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <Button
                android:id="@+id/lfActionVehicle"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_vehicle_owner" />

            <Button
                android:id="@+id/lfActionPassanger"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_passanger" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/lfActionLogin"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_or"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lfActionLogin"
            app:layout_constraintStart_toStartOf="@+id/lfActionLogin"
            app:layout_constraintTop_toBottomOf="@+id/lfActionReset"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/lfActionLogin"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/lfActionRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label_register_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lfActionReset"
            app:layout_constraintStart_toStartOf="@+id/lfActionReset"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/label_signin_helper"
            app:layout_constraintEnd_toEndOf="@+id/lfInputUsername"
            app:layout_constraintStart_toStartOf="@+id/lfInputUsername"
            app:layout_constraintTop_toBottomOf="@+id/lfLogo" />

        <ProgressBar
            android:id="@+id/lfProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
